# SlimAppCpp

./: CMakeLists.txt  README.md
src/: bmp2image.cpp  bmp2texture.cpp  slim.h
src/examples/: 0_barebone.cpp  1_defaults.cpp  2_time.cpp  3_canvas.cpp  3_shapes.cpp  4_text.cpp  5_files.cpp  5_mouse.cpp  6_HUD.cpp  6_keyboard.cpp  7_interactive.cpp  7_mouse.cpp  8_HUD.cpp  8_keyboard.cpp  9_game.cpp  DungeonCrawler.cpp  TileMap.cpp  VoxelSpaceEngine.cpp  curves.cpp  floor.texture  height_map.image  paint.cpp  painting.cpp  wall.texture
src/examples/DisplacementPainter/: app.cpp  app.cu  app.h  brush.h  brushCPU.h  brushGPU.h  brushXPU.h  input.image
src/examples/ray_circle_visualization/: viz.cpp
src/slim/: app.h
src/slim/core/: base.h  hud.h
src/slim/draw/: canvas.h  circle.h  hud.h  image.h  line.h  number.h  rectangle.h  text.h  texture.h  triangle.h
src/slim/math/: vec2.h
src/slim/serialization/: image.h  texture.h
